# c-hash

./: .gitignore  AI_PROMPT.md  CMakeLists.txt  README.md
.github/workflows/: release.yml  trigger-scoop-call.yml
res/: app.rc.in
scripts/: build-mingw.cmd  build-msvc-upx.cmd  build-msvc.cmd  build-ninja-mingw.cmd  build-ninja-msvc.cmd  clean.cmd
src/: gui.cpp  hash.cpp  hash.hpp  main.cpp
